k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiran-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tiran-app
  template:
    metadata:
      labels:
        app: tiran-app
    spec:
      containers:
      - name: tiran-app
        image: docker.io/$DOCKERHUB_USER/finalTiran:${CI_COMMIT_SHA}
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "250Mi"
            cpu: "500m"
            ephemeral-storage: "500Mi"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
            ephemeral-storage: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: tiran-service
  namespace: production
spec:
  selector:
    app: tiran-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
